--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -17,6 +17,21 @@
 <div class="cher" style='display:none'>
 	<%= image_tag('me.jpg')%>
 </div> 
+<div class="addy" style='display:none'>
+	<%= image_tag('addy.jpg')%>
+</div> 
+<div class="amanda" style='display:none'>
+	<%= image_tag('addy.jpg')%>
+</div> 
+<div class="jen" style='display:none'>
+	<%= image_tag('jen.JPG')%>
+</div> 
+<div class="jasmin" style='display:none'>
+	<%= image_tag('jen.JPG')%>
+</div> 
+<div class="monica" style='display:none'>
+	<%= image_tag('jen.JPG')%>
+</div> 
 
 
 
@@ -32,59 +47,133 @@
 	        		"name" : 'Chermaine',
 	        		"position" : 'Matron of Honor',
 	        		'klass' : '.cher',
+	        		'type' : 'Ice Cream',
 	        		'ice_cream' : 'Macadamia Nut',
 	        		'movie' : 'Up',
 	        		'summary' : 'If anyone that knows me, knows about my sister and how much I love her. My sister and I have a bond like no other. My sister has always been and will be my best friend, role model, and hero. Even though we’re eight years apart, people think we’re twins sometimes even identical. I always thought of myself as a mini version of my sister. From going to the same college (UC Davis)  to playing the same sport (basketball baby!), I always wanted to be just like my big sister. Besides Ben, she is the only person that I can truly be my dorky self. From singing and dancing in the car to NSYNC to baking brownies every Monday night while watching the Bachelor, she is truly my twin. She was always there for me whenever I had heartbreak and was always there to give me hope that one day when I least expect it, I would finally meet that special person. Chermaine (aka Shimmey, Shims, Sissy, etc) is one of the smartest, most loving, and selfless people I have ever known. My sister has always put herself before others which is one of the many traits that I admire most about her. Being so selfless, Chermaine actually created this website from scratch ( *mind blown*). I can\'t thank my sister enough for what she\'s done for me. I’m so happy to have my sister stand by my side as my matron of honor for the best day of my life.'
 	        	},
 
 	        	{
+	        		"name" : 'Addy',
+	        		"position" : 'Bridesmaid',
+	        		'klass' : '.addy',
+	        		'type' : 'Ice Cream',
+	        		'ice_cream' : 'Chunky Monkey',
+	        		'movie' : 'Tangled',
+	        		'summary' : 'I first met Addy when she, Amanda, and her friend Alex, came to visit Ben in California last summer and right off the bat I knew we would click. Both being the youngest and close in age, I knew we would share the same taste. We both share a love of basketball, chocolate, and Captain America. I remember we went spent a day at Disneyland and there was a meet and greet inside Innovations where you could meet Captain America. Addy was hilarious as she posed with Captain America (her face was priceless!) After spending time with her during that trip, I realized how funny Addy is and how similar she is to Ben. Addy is also an amazing Instagrammer (take notes folks). During my trip to Nebraska, I was blessed to attend a church service in the church that Ben grew up going to. Being sneaky, Addy took a picture of Ben and I holding hands during the service. She got us good as we had no idea she took the picture. Addy is funny, confident, and the little sister that I have never had. I’m so glad she gets to stand by my side on my big day and hopefully will capture some candid pics to post on Instagram! '
+
+
+	        	},
+
+	        	{
 	        		"name" : 'Amanda',
 	        		"position" : 'Bridesmaid',
-	        		'klass' : '.cher',
-	        		'ice_cream' : 'Macadamia Nut',
-	        		'movie' : 'Up'
-
-
-	        	},
-
-	        	{
-	        		"name" : 'Jasmine',
-	        		"position" : 'Bridesmaid',
-	        		'klass' : '.cher',
-	        		'ice_cream' : 'Macadamia Nut',
-	        		'movie' : 'Up'
+	        		'klass' : '.amanda',
+	        		'type' : 'Ice Cream',
+	        		'ice_cream' : 'Chocolate Chip Cookie Dough',
+	        		'movie' : 'Lion King',
+	        		'summary' : 'I met Amanda when she came to California to meet Ben and was anxious to get this girl into the kitchen. Amanda is my health nut twin and I strive to be more healthy like her ( I need to tame the fat girl inside me first) .  She is a wizard in the kitchen where she turns pinto beans into delicious cookies and protein drinks into birthday cake. If only I lived in Nebraska, I would definitely be the first person to sign up to be her official taste tester. I love how she can turn your favorite desserts into healthy desserts so you won’t feel guilty on having another piece. I’m not sure what her secret is but I’m excited to see what receipes she’ll cook up next. Amanda is very nurturing, loving, and passosinate about Christ. Amanda comes as a package deal. She wouldn\'t be complete without her husband Wyatt and her son Wylie. Wylie is the cutest kid ever who everyone gets to meet on our big day as he will be our ring bearer. I\'m so excited to have these two share my big day with me. '
 
 
 	        	},
 	        	{
-	        		"name" : 'Jenn',
+	        		"name" : 'Jen',
 	        		"position" : 'Bridesmaid',
-	        		'klass' : '.cher',
-	        		'ice_cream' : 'Macadamia Nut',
-	        		'movie' : 'Up'
-
-
-	        	}
-
+	        		'klass' : '.jen',
+	        		'type' : 'Ice Cream',
+	        		'ice_cream' : 'Pecan Praline',
+	        		'movie' : 'The Lion King',
+	        		'summary': 'Jen was the first friend I made at UC Davis and the first roommate I ever had. Whenever I hear about UC Davis football, I always think about Jen and our first UCD football experience. Being newbies to a new school and not knowing our way around, we decided to walk from our apartment to the football stadium. We soon realized that during college football games, you don’t sit down ..at all. From walking a couple of miles to the game to standing for three hours, the walk back home was tough. With Jen by my side, she made the walk home enjoyable and I realized that this girl was going to be more than a roomate but a great friend. Jen was always there to talk to about boys, go dancing with at Tres Hermanas, go to UCD sporting events, and eat crepes at Crepeville (our favorite local spot). Jen is smart, athletic, and one of the most down to earth people you will ever meet. I\'m so blessed to have such a great friend become one of my bridesmaids for the biggest day of my life. '
+	        	},
+	        	{
+	        		"name" : 'Jasmin',
+	        		"position" : 'Bridesmaid',
+	        		'klass' : '.jasmin',
+	        		'type' : 'Ice Cream',
+	        		'ice_cream' : 'Chocolate Chip',
+	        		'movie' : 'Aladdin',
+	        		'summary' : 'Jasmin has to be one of my favorite cousins. She is a constant reminder that I\'m half Filipino and always has a way of bringing that out in me. I remember going to family parties for Christmas and birthdays and she would always make each time memorable. One memory that I’ll always remember is pretending to be the Spice girls and performing in her bedroom to “Spice Up Your Life”. Of course I was Sporty Spice and she was Baby spice. From being Spice girls to Disney princesses, Jasmin was like another sister to me. Over the years we developed inside jokes (Ay my khaki pants!) that I’m sure we’ll share with our future “Spice girls”. I’m so excited that Jasmin will be by my side on my special day.'
+	        	},
+	        	{
+	        		"name" : 'Monica',
+	        		"position" : 'Bridesmaid',
+	        		'klass' : '.monica',
+	        		'type' : 'Yogurt',
+	        		'ice_cream' : 'Cinnamon Apple Spice',
+	        		'movie' : 'Honey I Shrunk the Kids',
+	        		'summary' : 'Monica was the last Fisher sibling to meet. I met her during my first trip to Nebraska in October 2014 where I was greeted by one of the biggest hugs I\'ve ever had. When Ben and I first started dating, Monica was the first person to reach out to me and I instantly felt like part of the family. Monica is another bride-to-be and I was so excited that I could finally talk to someone about wedding plans! Besides being an organized bride like myself, I found out that Monica was an amazing baker! While I was in Nebraska, Monica made these healthy chocolate chip cookies with coconut flour that tasted better than the real thing. It was so good, we ate the whole batch in one night (That’s my kinda girl!) I also witnessed Monica make a couple of items for her wedding. She is so crafty and talented, Martha Stewart better watch her back! Monica is energetic, creative, and super sweet. I’m so excited for this bride to become one of my bridesmaids!'
+	        	},
 	        ]
 
-	        function weddingPartyContainers(wpBridal){
+	        var wpGroomsmen = [
+	        	{
+	        		"name" : 'Anthony',
+	        		"position" : 'Best Man',
+	        		'klass' : '.cher',
+	        		'type' : 'Ice Cream',
+	        		'ice_cream' : 'Macadamia Nut',
+	        		'movie' : 'Up'
+	        	},
+	        	{
+	        		"name" : 'Vicente',
+	        		"position" : 'Groomsmen',
+	        		'klass' : '.cher',
+	        		'type' : 'Ice Cream',
+	        		'ice_cream' : 'Macadamia Nut',
+	        		'movie' : 'Up'
+	        	},
+	        	{
+	        		"name" : 'Joel',
+	        		"position" : 'Groomsmen',
+	        		'klass' : '.cher',
+	        		'type' : 'Ice Cream',
+	        		'ice_cream' : 'Macadamia Nut',
+	        		'movie' : 'Up'
+	        	},
+	        	{
+	        		"name" : 'Miles',
+	        		"position" : 'Groomsmen',
+	        		'klass' : '.cher',
+	        		'type' : 'Ice Cream',
+	        		'ice_cream' : 'Macadamia Nut',
+	        		'movie' : 'Up'
+	        	},
+	        	{
+	        		"name" : 'Josh',
+	        		"position" : 'Groomsmen',
+	        		'klass' : '.cher',
+	        		'type' : 'Ice Cream',
+	        		'ice_cream' : 'Macadamia Nut',
+	        		'movie' : 'Up'
+	        	},
+	        	{
+	        		"name" : 'Stephen',
+	        		"position" : 'Groomsmen',
+	        		'klass' : '.cher',
+	        		'type' : 'Ice Cream',
+	        		'ice_cream' : 'Macadamia Nut',
+	        		'movie' : 'Up'
+	        	},
+	        	
+	        ]
 
-	        	return '<div class="wpContainers" id="'+wpBridal.name+'"> \
-	        				<div class="wedding_party_names"><h2>'+wpBridal.name+'</h2></div> \
+	        function weddingPartyContainers(wpArray){
+
+	        	return '<div class="wpContainers" id="'+wpArray.name+'"> \
+	        				<div class="wedding_party_names"><h2>'+wpArray.name+'</h2></div> \
 	        		 		<div class="flip"> \
         						<div class="card"> \
             						<div class="face front"> \
 		        						<div class="wedding_party_pic_con"></div> \
 		        						<div class="info_container"> \
-		        							<h4>Favorite Ice Cream : '+wpBridal.ice_cream+' </h4> \
-		        							<h4>Favorite Disney Movie : '+wpBridal.movie+' </h4> \
+		        							<h4>Favorite '+wpArray.type+' : '+wpArray.ice_cream+' </h4> \
+		        							<h4>Favorite Disney Movie : '+wpArray.movie+' </h4> \
 		        							<hr> \
-								        	<h3>'+wpBridal.position+'</h3> \
+								        	<h3>'+wpArray.position+'</h3> \
 								        	</div> \
             						</div> \
             						<div class="face back"> \
-                						<p>'+wpBridal.summary+'</p> \
+                						<p>'+wpArray.summary+'</p> \
             						</div> \
         						</div> \
         					</div> \
@@ -95,9 +184,13 @@
 
 	        for(var i=0; i < wpBridal.length; i++){
 	            $('.bridal_party').append(weddingPartyContainers(wpBridal[i]))
-	            $('.groomsmen').append(weddingPartyContainers(wpBridal[i]))
 	            var pic = $(wpBridal[i].klass).html()
 	            $('#'+wpBridal[i].name+' .wedding_party_pic_con').append(pic)
+	        }
+	        for(var i=0; i < wpGroomsmen.length; i++){
+	            $('.groomsmen').append(weddingPartyContainers(wpGroomsmen[i]))
+	            var pic = $(wpGroomsmen[i].klass).html()
+	            $('#'+wpGroomsmen[i].name+' .wedding_party_pic_con').append(pic)
 	        }
 	    }
 
@@ -111,21 +204,17 @@
 	    // 	window.addEventListener("resize", bgOverlay, false);
 
 	appendWeddingPartyContainers()
-	    	$('.flip').mouseenter(function(){
-	    $(this).find('.card')
-        .addClass('flipped')
+	 $('.flip')
+	 .mouseenter(function(){
+	    $(this).find('.card').addClass('flipped')
         $(this).siblings('.style_declarations').css({
         	'border-top': '30px solid transparent',
         	'border-left': '30px solid transparent'
         })
-        $(this).find('.card')
-        .mouseleave(function(){
-            $(this).removeClass('flipped');
-
+    })
+	 .mouseleave(function(){
+            $(this).find('.card').removeClass('flipped');
         });
-        return false;
-    });
-
 
 
 </script>
