--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <link href='http://fonts.googleapis.com/css?family=Share+Tech|Codystar' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Codystar' rel='stylesheet' type='text/css'>
+  <script src="jssor.js"></script>
+  <script src="jssor.slider.mini.js"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
