gallery page done

--- a/app/views/welcome/gallery.html.erb
+++ b/app/views/welcome/gallery.html.erb
@@ -110,8 +110,8 @@
     </script>
     <!-- Jssor Slider Begin -->
     <!-- You can move inline styles to css file or css block. -->
-    <div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 800px;
-        height: 456px; background: #191919; overflow: hidden;">
+    <div id="slider1_container" style="position: relative; top: 0px; left: 0px; right:0; width: 800px;
+        height: 556px; background: #191919; overflow: hidden; margin:0 auto;">
 
         <!-- Loading Screen -->
         <div u="loading" style="position: absolute; top: 0px; left: 0px;">
@@ -124,7 +124,7 @@
         </div>
 
         <!-- Slides Container -->
-        <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 356px; overflow: hidden;">
+        <div u="slides" class="slides_container" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 456px; overflow: hidden;">
             <div>
                 <%= image_tag('me.jpg')%>
                 <%= image_tag('me.jpg', :u => 'thumb')%>
