--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -745,3 +745,11 @@ border-right: 30px solid #202020;
 	-webkit-transform: perspective(2000px); 
 	position: absolute;
 }
+
+.slides_container img {
+	height: 100%;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+}
