working gallery but chrome messed up

--- a/app/views/welcome/gallery.html.erb
+++ b/app/views/welcome/gallery.html.erb
@@ -126,13 +126,12 @@
         <!-- Slides Container -->
         <div u="slides" class="slides_container" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 456px; overflow: hidden;">
             <div>
-                <%= image_tag('me.jpg')%>
+                <%= image_tag('me.jpg', :class => 'normal')%>
                 <%= image_tag('me.jpg', :u => 'thumb')%>
             </div>
             <div>
-                <%= image_tag('me.jpg')%>
-                
-                <img u="thumb" src="../img/alila/thumb-02.jpg" />
+                <%= image_tag('aboutus.JPG', :class => 'test')%>
+                <%= image_tag('aboutus.JPG', :u => 'thumb') %>
             </div>
             <div>
                 <%= image_tag('me.jpg')%>
