--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -747,9 +747,16 @@ border-right: 30px solid #202020;
 }
 
 .slides_container img {
-	height: 100%;
 	position: absolute;
 	left: 0;
 	right: 0;
 	margin: 0 auto;
+}
+
+.test {
+	width: 100%;
+}
+
+.normal {
+	height: 100%;
 }
