--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -747,6 +747,7 @@ border-right: 30px solid #202020;
 }
 
 .slides_container img {
+	height: 100%;
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -754,9 +755,9 @@ border-right: 30px solid #202020;
 }
 
 .test {
-	width: 100%;
+	height: 100%;
 }
 
-.normal {
-	height: 100%;
+.jssora11l, .jssora11r, .jssora11ldn, .jssora11rdn {
+	background-image: url('a11.png');
 }
