--- a/app/views/welcome/gallery.html.erb
+++ b/app/views/welcome/gallery.html.erb
@@ -63,7 +63,7 @@
     <!-- Jssor Slider Begin -->
     <!-- You can move inline styles to css file or css block. -->
     <div id="slider1_container" style="position: relative; width: 720px;
-        height: 480px; overflow: hidden; margin: 0 auto; border-bottom: 15px solid white; border-right: 15px solid white;">
+        height: 480px; overflow: hidden; margin: 0 auto; border: 5px solid white; border-top: 3px solid white; border-left: 3px white solid;">
 
         <!-- Loading Screen -->
         <div u="loading" style="position: absolute; top: 0px; left: 0px;">
@@ -76,7 +76,7 @@
         </div>
 
         <!-- Slides Container -->
-        <div u="slides" class="slides_container" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 720px; height: 480px; overflow: hidden; border-top: 15px solid white; border-left: 15px solid white;">
+        <div u="slides" class="slides_container" style="cursor: move;position: absolute; left: 0px; top: 0px; width: 720px; height: 480px; overflow: hidden; ">
             <div>
                 <%= image_tag('me.jpg', :class => 'test')%>
                 <%= image_tag('me.jpg', :u => 'thumb')%>
