--- a/app/views/welcome/gallery.html.erb
+++ b/app/views/welcome/gallery.html.erb
@@ -78,61 +78,109 @@
         <!-- Slides Container -->
         <div u="slides" class="slides_container" style="cursor: move;position: absolute; left: 0px; top: 0px; width: 720px; height: 480px; overflow: hidden; ">
             <div>
-                <%= image_tag('me.jpg', :class => 'test')%>
-                <%= image_tag('me.jpg', :u => 'thumb')%>
+                <%= image_tag('gal1.JPG', :class => 'test')%>
+                <%= image_tag('gal1.JPG', :u => 'thumb')%>
             </div>
             <div>
-            	<%= image_tag('about.jpg', :class => 'test')%>
-                <%= image_tag('about.jpg', :u => 'thumb')%>
+            	<%= image_tag('gal2.JPG', :class => 'test')%>
+                <%= image_tag('gal2.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <%= image_tag('train.JPG', :class => 'test')%>
-                <%= image_tag('train.JPG', :u => 'thumb')%>
+                <%= image_tag('gal3.JPG', :class => 'test')%>
+                <%= image_tag('gal3.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <img u="image" src="../img/travel/04.jpg" />
-                <img u="thumb" src="../img/travel/thumb-04.jpg" />
+                <%= image_tag('gal4.JPG', :class => 'test')%>
+                <%= image_tag('gal4.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <img u="image" src="../img/travel/05.jpg" />
-                <img u="thumb" src="../img/travel/thumb-05.jpg" />
+                <%= image_tag('gal5.JPG', :class => 'test')%>
+                <%= image_tag('gal5.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <img u="image" src="../img/travel/06.jpg" />
-                <img u="thumb" src="../img/travel/thumb-06.jpg" />
+                <%= image_tag('gal6.JPG', :class => 'test')%>
+                <%= image_tag('gal6.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <img u="image" src="../img/travel/07.jpg" />
-                <img u="thumb" src="../img/travel/thumb-07.jpg" />
+                <%= image_tag('gal7.JPG', :class => 'test')%>
+                <%= image_tag('gal7.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <img u="image" src="../img/travel/08.jpg" />
-                <img u="thumb" src="../img/travel/thumb-08.jpg" />
+                <%= image_tag('gal8.JPG', :class => 'test')%>
+                <%= image_tag('gal8.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <img u="image" src="../img/travel/09.jpg" />
-                <img u="thumb" src="../img/travel/thumb-09.jpg" />
+                <%= image_tag('gal9.JPG', :class => 'test')%>
+                <%= image_tag('gal9.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <img u="image" src="../img/travel/10.jpg" />
-                <img u="thumb" src="../img/travel/thumb-10.jpg" />
+                <%= image_tag('gal10.JPG', :class => 'test')%>
+                <%= image_tag('gal10.JPG', :u => 'thumb')%>
             </div>
 
             <div>
-                <img u="image" src="../img/travel/11.jpg" />
-                <img u="thumb" src="../img/travel/thumb-11.jpg" />
+                <%= image_tag('gal11.JPG', :class => 'test')%>
+                <%= image_tag('gal11.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <img u="image" src="../img/travel/12.jpg" />
-                <img u="thumb" src="../img/travel/thumb-12.jpg" />
+                <%= image_tag('gal12.JPG', :class => 'test')%>
+                <%= image_tag('gal12.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <img u="image" src="../img/travel/13.jpg" />
-                <img u="thumb" src="../img/travel/thumb-13.jpg" />
+                <%= image_tag('gal13.JPG', :class => 'test')%>
+                <%= image_tag('gal13.JPG', :u => 'thumb')%>
             </div>
             <div>
-                <img u="image" src="../img/travel/14.jpg" />
-                <img u="thumb" src="../img/travel/thumb-14.jpg" />
+                <%= image_tag('gal14.JPG', :class => 'test')%>
+                <%= image_tag('gal14.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal15.JPG', :class => 'test')%>
+                <%= image_tag('gal15.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal16.JPG', :class => 'test')%>
+                <%= image_tag('gal16.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal17.JPG', :class => 'test')%>
+                <%= image_tag('gal17.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal18.JPG', :class => 'test')%>
+                <%= image_tag('gal18.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal19.JPG', :class => 'test')%>
+                <%= image_tag('gal19.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal20.JPG', :class => 'test')%>
+                <%= image_tag('gal20.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal21.JPG', :class => 'test')%>
+                <%= image_tag('gal21.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal22.JPG', :class => 'test')%>
+                <%= image_tag('gal22.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal23.JPG', :class => 'test')%>
+                <%= image_tag('gal23.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal24.JPG', :class => 'test')%>
+                <%= image_tag('gal24.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal25.JPG', :class => 'test')%>
+                <%= image_tag('gal25.JPG', :u => 'thumb')%>
+            </div>
+            <div>
+                <%= image_tag('gal26.JPG', :class => 'test')%>
+                <%= image_tag('gal26.JPG', :u => 'thumb')%>
             </div>
         </div>
         
@@ -153,7 +201,7 @@
                     position: absolute;
                     top: 0px;
                     left: 0px;
-                    width: 99px;
+                    width: 77px;
                     height: 66px;
                     filter: alpha(opacity=80);
                     opacity: .8;
@@ -166,7 +214,7 @@
                     position: absolute;
                     top: 0px;
                     left: 0px;
-                    width: 97px;
+                    width: 77px;
                     height: 64px;
                     border: 1px solid #000;
                     transition: border-color .6s;
