--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -49,7 +49,7 @@
 	        days = parseInt(seconds_left / 86400);
 	        seconds_left = seconds_left % 86400;
 	         
-	        hours = parseInt(seconds_left / 3600);
+	        hours = parseInt(seconds_left / 3600) + 1;
 	        seconds_left = seconds_left % 3600;
 	         
 	        minutes = parseInt(seconds_left / 60);
