--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -9,9 +9,12 @@
 
 
 <div id="wedding_party">
-	<h1>The Wedding Party</h1>
+	<div style="background-color: white; width: 100%; height: 200px; position: relative;">
+	<h1 style=" position: absolute; left:0; right:0; top: 50%; margin:0 auto; margin-top: -50px; ">The Wedding Party</h1>
+	</div>
 	<div class="groomsmen"> </div>
 <div class="bridal_party"> </div>
+<div style="width:100%; clear:both; height: 600px; background-color: transparent;"></div>
 </div>
 
 <div class="cher" style='display:none'>
