adds nav bar to every page

--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -1,8 +1,6 @@
 <div class="bg_rsvp"></div>
 
-<div class="rsvp_home_link">
-<%= link_to 'home', controller: 'welcome', action: 'index' %>
-</div>
+
 
 <div id="enter_code">
 
@@ -64,6 +62,18 @@
 	</div>
 
 </div>
+
+<footer id='landing'>
+	<ul>
+		<li><%= link_to 'About Us', controller: 'welcome', action: 'about' %></li>
+		<li><%= link_to 'Meet the Wedding Party', controller: 'welcome', action: 'bridal_party' %></li>
+		<li><%= link_to 'Wedding Logistics', controller: 'welcome', action: 'logistics' %></li>
+		<li><%= link_to 'Gallery', controller: 'welcome', action: 'gallery' %></li>
+		<li><%= link_to 'home', controller: 'welcome', action: 'index' %></li>
+
+	</ul>
+	
+</footer>
 
 <script type="text/javascript">
 	$(".rsvp_yes").on("change", function(){
