--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -84,15 +84,11 @@
 
 .about_content_con {
 	width: 58%;
+	height: 650px;
 	position: absolute;
-	/*background-color: rgba(255,255,255,.6);*/
-
 	right: 0;
 	top: 0;
-	bottom: 0;
 	color: white;
-
-	/*color: black;*/
 	font-size: 1.5em;
 	overflow: scroll;
 	color: white;
@@ -110,9 +106,9 @@
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
 	font-size: 1.2em;
-
-
 }
+
+.about_content p {}
 
 .about_pic img {
 	width: 90%;
@@ -277,7 +273,7 @@
 	background-color: transparent;
 	position: absolute;
 	overflow: hidden;
-	top: 400px;
+	top: 450px;
 	left: 0;
 
 }
@@ -729,7 +725,7 @@ border-right: 30px solid #202020;
 
 #wedding_party_landing {
 	width: 100%;
-	height: 400px;
+	height: 500px;
 	background-image: url('wp.JPG');
 	background-size: cover;
 	background-position: center;
