--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -1,9 +1,9 @@
 <div class="bg_rsvp"></div>
 
-<div class="rsvp_home_link">
+<!-- <div class="rsvp_home_link">
 <%= link_to 'home', controller: 'welcome', action: 'index' %>
 </div>
-
+ -->
 <div class='created_outer'>
   <div class="created_inner">
     <div class="overview">
@@ -49,6 +49,15 @@
   </div>
 </div>
 
+<footer id='landing'>
+  <ul>
+    <li><%= link_to 'About Us', controller: 'welcome', action: 'about' %></li>
+    <li><%= link_to 'Meet the Wedding Party', controller: 'welcome', action: 'bridal_party' %></li>
+    <li><%= link_to 'Wedding Logistics', controller: 'welcome', action: 'logistics' %></li>
+    <li><%= link_to 'Gallery', controller: 'welcome', action: 'gallery' %></li>
+    <li><%= link_to 'home', controller: 'welcome', action: 'index' %></li>
+  </ul>
+</footer>
 
 
 <!-- <table>
