--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -2,9 +2,9 @@
 	
 </div>
 <div id="black_overlay"></div>
-		<div class='about_home_link' >
+		<!-- <div class='about_home_link' >
 		<%= link_to 'Home', controller: 'welcome', action: 'index'%>
-		</div>
+		</div> -->
 
 <div class="about_pic">
 	<%= image_tag("wedding_party.JPG") %>
@@ -30,6 +30,17 @@
 		</p>
 	</div>
 </div>
+
+<footer id='landing'>
+	<ul>
+		<li><%= link_to 'RSVP', controller: 'guests', action: 'new' %></li>
+		<li><%= link_to 'Meet the Wedding Party', controller: 'welcome', action: 'bridal_party' %></li>
+		<li><%= link_to 'Wedding Logistics', controller: 'welcome', action: 'logistics' %></li>
+		<li><%= link_to 'Gallery', controller: 'welcome', action: 'gallery' %></li>
+		<li><%= link_to 'Home', controller: 'welcome', action: 'index' %></li>
+	</ul>
+	
+</footer>
 
 
 <script type="text/javascript">
