--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -1,9 +1,15 @@
 <div id="bg_wedding_party"></div>
 
-<div class='wedding_party_home_link'>
-<%= link_to 'home', controller: 'welcome', action: 'index' %>
-</div>
-
+<footer id='landing' style=" top:0; z-index: 100">
+	<ul>
+		<li><%= link_to 'RSVP', controller: 'guests', action: 'new' %></li>
+		<li><%= link_to 'About Us', controller: 'welcome', action: 'about' %></li>
+		<li><%= link_to 'Wedding Logistics', controller: 'welcome', action: 'logistics' %></li>
+		<li><%= link_to 'Gallery', controller: 'welcome', action: 'gallery' %></li>
+		<li><%= link_to 'Home', controller: 'welcome', action: 'index' %></li>
+	</ul>
+	
+</footer>
 
 <div id="wedding_party_landing"></div>
 
@@ -16,6 +22,8 @@
 <div class="bridal_party"> </div>
 <div style="width:100%; clear:both; height: 600px; background-color: transparent;"></div>
 </div>
+
+
 
 <div class="cher" style='display:none'>
 	<%= image_tag('me.jpg')%>
