--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -69,7 +69,7 @@
 		<li><%= link_to 'Meet the Wedding Party', controller: 'welcome', action: 'bridal_party' %></li>
 		<li><%= link_to 'Wedding Logistics', controller: 'welcome', action: 'logistics' %></li>
 		<li><%= link_to 'Gallery', controller: 'welcome', action: 'gallery' %></li>
-		<li><%= link_to 'home', controller: 'welcome', action: 'index' %></li>
+		<li><%= link_to 'Home', controller: 'welcome', action: 'index' %></li>
 
 	</ul>
 	
