--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,9 +7,9 @@
 	<div id='date'>
 	<h2>
 		<div class='mickey'>6</div>
-		<div class='mickeyUi' style='font-size: .5em;'>&#2047</div>
+		<div class='mickeyUi' style='font-size: .5em;'>&#x00AA;</div>
 		<div class='mickey'>20</div>
-		<div class='mickeyUi' style='font-size: .5em;'>&#2047</div>
+		<div class='mickeyUi' style='font-size: .5em;'>&#x00AA;</div>
 		<div class="mickey">15</div></h2>
 	</div>
 	<div id="countdown"></div>
