--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -18,9 +18,11 @@
 	<div style="background-color: white; width: 100%; height: 200px; position: relative;">
 	<h1 style=" position: absolute; left:0; right:0; top: 50%; margin:0 auto; margin-top: -50px; ">The Wedding Party</h1>
 	</div>
-	<div class="groomsmen"> </div>
-<div class="bridal_party"> </div>
-<div style="width:100%; clear:both; height: 600px; background-color: transparent;"></div>
+	<div style="width: 100%; overflow:hidden; background-color: #202020; ">
+		<div class="groomsmen"> </div>
+		<div class="bridal_party"> </div>
+	</div>
+	<div style="width:100%; clear:both; height: 600px; background-color: transparent;"></div>
 </div>
 
 
@@ -42,6 +44,24 @@
 </div> 
 <div class="monica" style='display:none'>
 	<%= image_tag('jen.JPG')%>
+</div> 
+<div class="anthony" style='display:none'>
+	<%= image_tag('anthony.jpg')%>
+</div> 
+<div class="vicente" style='display:none'>
+	<%= image_tag('vicente.jpg')%>
+</div> 
+<div class="joel" style='display:none'>
+	<%= image_tag('joel.jpg')%>
+</div> 
+<div class="miles" style='display:none'>
+	<%= image_tag('miles.jpg')%>
+</div>
+<div class="josh" style='display:none'>
+	<%= image_tag('josh.jpg')%>
+</div> 
+<div class="stephen" style='display:none'>
+	<%= image_tag('stephen.jpg')%>
 </div> 
 
 
@@ -120,7 +140,7 @@
 	        	{
 	        		"name" : 'Anthony',
 	        		"position" : 'Best Man',
-	        		'klass' : '.cher',
+	        		'klass' : '.anthony',
 	        		'type' : 'Ice Cream',
 	        		'ice_cream' : 'Macadamia Nut',
 	        		'movie' : 'Up'
@@ -128,31 +148,34 @@
 	        	{
 	        		"name" : 'Vicente',
 	        		"position" : 'Groomsmen',
-	        		'klass' : '.cher',
-	        		'type' : 'Ice Cream',
-	        		'ice_cream' : 'Macadamia Nut',
-	        		'movie' : 'Up'
+	        		'klass' : '.vicente',
+	        		'type' : 'Yogurt',
+	        		'ice_cream' : 'Mango',
+	        		'movie' : 'Dumbo',
+	        		'summary' : 'Vicente and I first met in junior high at Overton High School, where he would always offer me gum after math class.  He and I quickly became great friends as we played football, basketball, and ran track together.  He was born in Guatemala, and came to the United States when he was 13 years old.  His favorite sport is football and his favorite food is IN-N-OUT.  He is currently working and going to school for social services study.  He has a 3 year old, who he loves with all his heart.'
 	        	},
 	        	{
 	        		"name" : 'Joel',
 	        		"position" : 'Groomsmen',
-	        		'klass' : '.cher',
-	        		'type' : 'Ice Cream',
-	        		'ice_cream' : 'Macadamia Nut',
-	        		'movie' : 'Up'
+	        		'klass' : '.joel',
+	        		'type' : 'Yogurt',
+	        		'ice_cream' : 'Peach',
+	        		'movie' : 'Lion King',
+	        		'summary' : 'Joel and I first met through an awesome internship selling books with Southwestern Advantage, where we roomed together for the summer.  We had some crazy fun times and got to go to Mexico twice as an incentive trip for doing well during the internship!  He likes to go by "Joel Micheal Jerome Kosch the 1st."  Joel graduated from UNK and is from small town Humphrey NE.  He is the youngest of 10 kinds(his family means a ton to him).  Joel loves to golf,run,travel, and go on long walks on the Nebraska beach.  He has been dating his girlfriend Jess for about 2 years; she is patient and witty!  He lives in Kansas City now working with Great American, helping with school fundraising.  It\'s awesome!  Go Royals :) He knows Nicole and I will continue to have God at the center of our relationship.'
 	        	},
 	        	{
 	        		"name" : 'Miles',
 	        		"position" : 'Groomsmen',
-	        		'klass' : '.cher',
-	        		'type' : 'Ice Cream',
-	        		'ice_cream' : 'Macadamia Nut',
-	        		'movie' : 'Up'
+	        		'klass' : '.miles',
+	        		'type' : 'Yogurt',
+	        		'ice_cream' : 'Vanilla with fresh fruit',
+	        		'movie' : 'Mighty Ducks',
+	        		'summary' : 'Miles and I first met at Concordia University NE, where I recruited him for my team to do a crazy awesome internship of selling books with Southwestern Advantage(for which he is forever thankful).  He played baseball at College of the Siskiyous in CA and Concordia NE.  He currently lives in Los Angeles working in an office for a cabinetry company.  When he is not at work, he is really involved in youth ministry, softball, and jamming out on his guitar.  You can find him at the beach or traveling the country.  Miles loves Jesus!'
 	        	},
 	        	{
 	        		"name" : 'Josh',
 	        		"position" : 'Groomsmen',
-	        		'klass' : '.cher',
+	        		'klass' : '.josh',
 	        		'type' : 'Ice Cream',
 	        		'ice_cream' : 'Macadamia Nut',
 	        		'movie' : 'Up'
@@ -160,7 +183,7 @@
 	        	{
 	        		"name" : 'Stephen',
 	        		"position" : 'Groomsmen',
-	        		'klass' : '.cher',
+	        		'klass' : '.stephen',
 	        		'type' : 'Ice Cream',
 	        		'ice_cream' : 'Macadamia Nut',
 	        		'movie' : 'Up'
