--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div id="bg_landing"></div>
 
-<div id='landing_box'>
+<!-- <div id='landing_box'> -->
 	<div id="title_landing">
 	<h1>Ben and Nicole</h1>
 	</div>
@@ -10,10 +10,11 @@
 		<div class='mickeyUi' style='font-size: .5em;'>&#x00AA;</div>
 		<div class='mickey'>20</div>
 		<div class='mickeyUi' style='font-size: .5em;'>&#x00AA;</div>
-		<div class="mickey">15</div></h2>
+		<div class="mickey">15</div>
+	</h2>
 	</div>
 	<div id="countdown"></div>
-</div>
+<!-- </div> -->
 
 
 
