--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -5,7 +5,6 @@
 }
 
 #bg_landing, #bg_about_us, #bg_wedding_party, #bg_wedding_details, .bg_rsvp, #bg_gallery {
-	background-image: url('landing.JPG');
 	background-size: cover;
 	background-repeat: no-repeat;
 	position: absolute;
@@ -14,6 +13,11 @@
 	bottom: 0;
 	right: 0;
 	z-index: -1;
+}
+
+#bg_landing {
+	background-image: url('landing.JPG');
+	background-position: center;
 }
 
 #bg_about_us {
@@ -182,8 +186,13 @@
 
 #title_landing h1{
 	font-weight: bolder;
-	color: white;
-	text-shadow: 2px 2px #000;
+	color: rgba(0,0,0,0.9);
+	/*text-shadow: 2px 2px #fff;*/
+	text-shadow:
+    -5px -5px 0 #fff,
+    1px -1px 0 #fff,
+    -2px 1px 0 #fff,
+    1px 1px 0 #fff;  
     /*-1px -1px 0 #000,
     1px -1px 0 #000,
     -1px 1px 0 #000,
@@ -191,9 +200,10 @@
 	/*font-family: 'Calligraffitti', cursive;*/
 	/*font-family: 'Codystar', cursive;*/
 	font-family: 'Waltograph';
-	margin: 0;
-    min-height: 100px;
-    line-height: 100px;
+	position: relative;
+	left: 0;
+	right: 0;
+	text-align: center;
 }
 
 #edit_rsvp h1 {
@@ -213,28 +223,27 @@
 }
 
 #date {
-	width: 365px;
-	font-size: 3em;
+	font-size: 2.5em;
+	height: 90px;
+	
 	text-align: center;
-	position: absolute;
+	/*position: absolute;
 	top:0;
 	left: 0;
-	right: 0;
-	height: 90px;
-	margin: 0 auto;
+	right: 0;*/
 }
 
 #date h2 {
 	font-family: 'Waltograph';
+	display: inline-block;
 	/*font-family: 'Share Tech', sans-serif;*/
 	color: white;
 	text-shadow:
-    -1px -1px 0 #000,
+    -2px -3px 0 #000,
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;  
-	margin: 0;
-	line-height: 90px;
+	line-height: 50px;
 }
 
 .mickey, .mickeyUi {
@@ -244,22 +253,26 @@
 }
 
 .mickeyUi {
-	font-family: 'Waltograph UI'
+	font-family: 'Waltograph UI';
+	color: black;
+	text-shadow:
+    -1px -1px 5px #eee,
+    1px -1px 5px #eee,
+    -1px 1px 5px #eee,
+    1px 1px 5px #eee;  
 }
 
 #countdown {
 	font-family: 'Waltograph';
 	color: white;
-	text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;  
+	text-shadow: 2px 2px #000;
+
+	
 	width: 100%;
 	font-size: 3.5em;
 	text-align: center;
 	position: absolute;
-	bottom: 0;
+	bottom: 150px;
 	left: 0;
 	right: 0;
 	height: 90px;
@@ -762,4 +775,9 @@ border-right: 30px solid #202020;
 
 .jssora11l, .jssora11r, .jssora11ldn, .jssora11rdn {
 	background-image: url('a11.png');
+}
+
+/*@media only screen and (min-width: 300px) and (max-width: 359px){*/
+@media only screen and (min-width: 300px) and (max-width: 359px){
+
 }
